--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^15.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-id-swiper": "^4.0.0",
